@@ -1,4 +1,14 @@
 ====================
+2021/10/23
+
+- Changed cubr_json OpenAndParse to set Copper return as bool result of Storage::parseFile.
+- Added CheckAccessorValidity().
+- Implemented Storage::initializeRoot(), InitRootNode() and added to addToEngine().
+- Implemented WriteJSON(), Storage::writeToFile(), Storage::writeToString(), Storage::writeNodeToString() and debugged.
+- Added EnablePrettyPrint() and added to addToEngine().
+
+
+====================
 2021/1/14, 2021/3/20, 2021/4/17, 2021/5/9
 
 - Fixed GUIWatcher::OnEvent() blocking event passback.
